--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -35,7 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Total Confirmed: <span style=\"color:red\">1329</span> &nbsp; Total Deaths: <span style=\"color:red\">7</span> &nbsp; Total Recovered: <span style=\"color:green\">5</span></h1>"
+    "<h1>Total Confirmed: <span style=\"color:red\">1329</span></h1>\n",
+    "<h1>Total Deaths: <span style=\"color:red\">7</span></h1>\n",
+    "<h1>Total Recovered: <span style=\"color:green\">5</span></h1>"
    ]
   },
   {
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +171,7 @@
        "23  2020-03-24      ie   1329       7          5             20"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,17 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0784ec90ab8443e98e35da7ef9bddf5b\"></div>\n",
+       "<div id=\"altair-viz-01176b994eae4c0e99b5d9e52d4df98e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-0784ec90ab8443e98e35da7ef9bddf5b\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-01176b994eae4c0e99b5d9e52d4df98e\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -384,7 +386,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,17 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3cc4d9256b54467daf65a8a5883a06f7\"></div>\n",
+       "<div id=\"altair-viz-abecb8564e4d446a9304fefb3cbb1b8d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-3cc4d9256b54467daf65a8a5883a06f7\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-abecb8564e4d446a9304fefb3cbb1b8d\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -465,7 +467,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-7191492ad22f417f9403d42943d80a54\"></div>\n",
+       "<div id=\"altair-viz-c0f319b5abc94eaaa368b0a9112f0abc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-7191492ad22f417f9403d42943d80a54\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-c0f319b5abc94eaaa368b0a9112f0abc\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -553,7 +555,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,30 +582,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Number of persons tested positive for Covid-19 in Ireland\n",
-    "The figure below shows the total number of persons who tested positive for Covid-19 (_cases_) in Ireland, Italy, and Spain. The `x` axis corresponds to the number of days since at least 10 cases were detected. This allow us to compare Ireland's current situation to the observed in Italy and Spain earlier. The comparison using Italy and Spain is because those countries are still in a critical situation fighting the pandemia, and no country would like to be the next one in such situation. \n",
+    "#hide\n",
+    "# # Number of persons tested positive for Covid-19 in Ireland\n",
+    "# The figure below shows the total number of persons who tested positive for Covid-19 (_cases_) in Ireland, Italy, and Spain. The `x` axis corresponds to the number of days since at least 10 cases were detected. This allow us to compare Ireland's current situation to the observed in Italy and Spain earlier. The comparison using Italy and Spain is because those countries are still in a critical situation fighting the pandemia, and no country would like to be the next one in such situation. \n",
     "\n",
-    "For Ireland, the size of the circles for each day denotes the number of new persons confirmed infected that day.\n",
+    "# For Ireland, the size of the circles for each day denotes the number of new persons confirmed infected that day.\n",
     "\n",
-    "**If we consider only the absolute numbers, we can see that the confirmed cases for Covid-19 in Ireland are below the ones observed in Italy and Spain at early stages. However, the populations of the three countries are very different and we have to account for that as well.**"
+    "# **If we consider only the absolute numbers, we can see that the confirmed cases for Covid-19 in Ireland are below the ones observed in Italy and Spain at early stages. However, the populations of the three countries are very different and we have to account for that as well.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8cf64905173f41ffa6782fe38ad50a68\"></div>\n",
+       "<div id=\"altair-viz-d49722dc1e254dd18e63ef580f404e03\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-8cf64905173f41ffa6782fe38ad50a68\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-d49722dc1e254dd18e63ef580f404e03\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -651,13 +656,13 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#hide_input\n",
+    "#hide\n",
     "\n",
     "alt.layer(cases_it_plot, cases_es_plot, cases_ie_plot).resolve_scale(\n",
     "    color='independent',\n",
@@ -674,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,17 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-198591dbd5a04765a7408a180738b1b6\"></div>\n",
+       "<div id=\"altair-viz-ccac1a9163c04a3da723270f7900a89b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-198591dbd5a04765a7408a180738b1b6\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-ccac1a9163c04a3da723270f7900a89b\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -758,7 +763,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,17 +786,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-dc1a91124d084cb286b8ed2a29014a60\"></div>\n",
+       "<div id=\"altair-viz-3b32579a196b43e7ae4fcec0d5ae776a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-dc1a91124d084cb286b8ed2a29014a60\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-3b32579a196b43e7ae4fcec0d5ae776a\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -839,7 +844,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,17 +872,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-a9ce18f1abdd47a8b8618043a5aff211\"></div>\n",
+       "<div id=\"altair-viz-a5f58aff75064e948bb03129dee6036d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-a9ce18f1abdd47a8b8618043a5aff211\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-a5f58aff75064e948bb03129dee6036d\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -925,7 +930,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,17 +958,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8268716c0c9548189dcf80fb3558890a\"></div>\n",
+       "<div id=\"altair-viz-7febebb8780546a8aeb718b1f3f67bad\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-8268716c0c9548189dcf80fb3558890a\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-7febebb8780546a8aeb718b1f3f67bad\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -1011,7 +1016,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
