--- a/_posts/2020-03-28-covid19-ca.md
+++ b/_posts/2020-03-28-covid19-ca.md
@@ -41,6 +41,16 @@ layout: notebook
     {% raw %}
     
 <div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="n">html_head</span> <span class="o">+</span> <span class="n">base_map_html</span> <span class="o">+</span> <span class="n">base_layer</span> <span class="o">+</span> <span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">map_circles_html</span><span class="p">)))</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
 
 <div class="output_wrapper">
 <div class="output">
@@ -50,7 +60,6 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea ">
 
-<!DOCTYPE html>
 <html>
 <head>
   <title>Covid-19 en Centroamérica</title>
