--- a/_notebooks/2020-03-28-covid19-ca.ipynb
+++ b/_notebooks/2020-03-28-covid19-ca.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,13 @@
     "               max_zoom=zoom+1,\n",
     "               min_zoom=zoom-1\n",
     "              )\n",
+    "\n",
+    "# tiles = 'cartodbdark_matter'\n",
+    "# tiles = 'cartodbpositron'\n",
+    "# tiles = 'stamentoner'\n",
+    "tiles = 'stamenterrain'\n",
+    "\n",
+    "folium.TileLayer(tiles, min_zoom=zoom-1, max_zoom=zoom+1).add_to(m)\n",
     "\n",
     "for c in countries:\n",
     "    folium.CircleMarker(\n",
@@ -245,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -262,10 +269,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11725a4d0>"
+       "<IPython.lib.display.IFrame at 0x118f19750>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
